quick mobile overflow fix

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -141,7 +141,7 @@ img {
   cursor: pointer;
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:600px) {
 
     body img {
         height: 80vh;
@@ -160,6 +160,8 @@ img {
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
+        overflow:auto;
+
 
     }
 
